# RiemannMapping

./: CMakeCache.txt  CMakeLists.txt  LICENSE  SphericalMapping.sh
include/: selfSphericalMapping.cxx  selfSphericalMapping.h  selfTriangularMesh.cxx  selfTriangularMesh.h
src/: CMakeLists.txt  SphercialConformalMapping.cpp
